# dweb_browser

./: .gitignore  .gitmodules  .prettierrc  FRAMEWORK_DIAGRAM.md  GET_START_FOR_DEVELOPER.en.md  GET_START_FOR_DEVELOPER.md  GET_START_FOR_DEVELOPER.quick.en.md  GET_START_FOR_DEVELOPER.quick.md  LICENSE  README.md  README_EN.md  README_ZH.md  REFERENCE.md  ai.md  deno.json  deno.jsonc  favicons.md  git-contribution.ts  import_map.json  monthly.md  package.json  plaoc-client.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json  vitest.config.mts  vitest.config.ts
android/: .gitignore  .versions.gradle.kts.bak  README.md  build.gradle  build.gradle.bak  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  versions.gradle
bfs/: .gitignore  README.md  bfs.json  deno.jsonc
desktop/: .gitignore  README.md  desktop.html  doc.md  electron-vite.config.js  electron-vite.config.ts  esbuild.browser.worker.js  esbuild.btry.worker.js  esbuild.statusbar.worker.js  global.d.ts  index.html  index.js  js-process.html  manifest.json  multi-webview.html  package-lock.json  package.json  pnpm-lock.yaml  prettierrc.js  start.sh  test.js  test.json  tsconfig.json
desktop-dev/: .npmrc  bun.lockb  deno.json  electron-vite.config.ts  import_map.json  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
dev-docs/: 23-9月学习会参考资料.md  dweb-browser get-start-for-developer.md
ios/: .gitignore  SwiftUIBindingMAUI.csproj  build.sh
next/kmp/ziplib/uniffi/: Cargo.toml  build.rs
next/kmp/ziplib/uniffi/src/: lib.rs  ziplib.udl
(+8522 files in other folders)
